Docker/k8s/00-namespace-config-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falcon-pms
