Docker/k8s/02-pgbouncer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: falcon-pms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: edoburu/pgbouncer:latest
          ports:
            - containerPort: 6432
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
  namespace: falcon-pms
spec:
  ports:
    - port: 6432
      targetPort: 6432
  selector:
    app: pgbouncer
  type: ClusterIP
