Docker/k8s/04-falcon-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falcon-web
  namespace: falcon-pms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: falcon-web
  template:
    metadata:
      labels:
        app: falcon-web
    spec:
      containers:
        - name: falcon-web
          image: falcon-pms:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/v1/health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: falcon-web-service
  namespace: falcon-pms
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: falcon-web
  type: ClusterIP
